# file_picker

./: .gitignore  Cargo.toml
src/: cli.rs  config.rs  file_utils.rs  history_manager.rs  main.rs  metadata_retriever.rs  stream_server.rs  ui.rs  video_entry.rs
